--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Debugger",
   "description": "",
   "version": "0.0.1",
+  "publisher": "hyperledger-fabric",
   "engines": {
     "vscode": "^1.54.0"
   },
