changed the name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "debugger",
-  "displayName": "Debugger",
+  "displayName": "New Debugger",
   "description": "",
   "version": "0.0.1",
   "publisher": "hyperledger-fabric",
