Building an icon for the debugger
Signed-off-by: urgetolearn <chinmayishaan2316@gmail.com>

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
         {
           "id": "statedb",
           "name": "State Database"
+        },
+        {
+          "id": "new-view",
+          "name": "New View"
         }
       ]
     },
